--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-switch": "^1.2.6",
+    "@tanstack/react-table": "^8.21.3",
     "axios": "^1.13.2",
     "better-auth": "^1.3.4",
     "class-variance-authority": "^0.7.1",
